redefined columns in tables
